objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_Competency_By__c</fullName>
        <formula>LastModifiedBy.FirstName  &amp;  TEXT(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmed Competency By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Competency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed Competency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deliver_By__c</fullName>
        <label>Deliver By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Devops_Demo__c</fullName>
        <label>Devops Demo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Essentials_Demo__c</fullName>
        <label>Essentials Demo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Rule__c</fullName>
        <label>Global Rule</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rollback__c</fullName>
        <label>Rollback</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <label>Support Level</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Binding_Request</fullName>
        <active>true</active>
        <label>Binding Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recordtype1</fullName>
        <active>false</active>
        <label>Recordtype1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales</fullName>
        <active>true</active>
        <label>Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support</fullName>
        <active>true</active>
        <label>Support</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Number_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(True)</errorConditionFormula>
        <errorDisplayField>AccountNumber</errorDisplayField>
        <errorMessage>First Component should be a number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Deliver_By_Is_Within_2_days</fullName>
        <active>true</active>
        <errorConditionFormula>(5 * ( FLOOR( ( Deliver_By__c  - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
Deliver_By__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE (Request_Date__c)  - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
DATEVALUE(Request_Date__c) - DATE( 1900, 1, 8), 7 ) ) )&lt; 3</errorConditionFormula>
        <errorDisplayField>Deliver_By__c</errorDisplayField>
        <errorMessage>TEST DEL DATE</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Test_Phone_Format</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(LEFT(Phone, 2) = &apos;+1&apos;)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone number must start with +1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>test</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
OR(ShippingCountry = &quot;CA&quot;, ShippingCountry=&quot;CAN&quot;),
OR(
LEN(ShippingState) &lt; 2,
NOT(
CONTAINS(&quot;AB:BC:MB:NB:NL:NT:NS:NU:ON:PC:QC:SK:YT&quot;,
ShippingState)
)))</errorConditionFormula>
        <errorMessage>test</errorMessage>
    </validationRules>
</CustomObject>